--- a/pages/18749.html
+++ b/pages/18749.html
@@ -319,11 +319,13 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a>, <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/wave'>wave</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
 </li>
 </ul>
 
@@ -390,20 +392,27 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and write <math class='maruku-mathml' display='inline' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. Then a <em>plane wave</em> on <math class='maruku-mathml' display='inline' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⟶</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and write <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. Then a <em>plane wave</em> on <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/function'>function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⟶</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>
   \mathbb{R}^n \longrightarrow \mathbb{C}
 
 </annotation></semantics></math></div>
 <p>given by the <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential function</a> with <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a> argument of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mspace width='thickmathspace'></mspace><mo>↦</mo><mspace width='thickmathspace'></mspace><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mspace width='thickmathspace'></mspace><mo>↦</mo><mspace width='thickmathspace'></mspace><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>⋅</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \vec x \;\mapsto\; e^{2 \pi i \vec k \cdot \vec x}
   \,.
 
 </annotation></semantics></math></div>
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_cee27c19c7ecffc50dad6b91369b982ef748734f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></em> determining this plane wave.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\vec k \in \mathbb{R}^n</annotation></semantics></math> is the <em><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></em> determining this plane wave.</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a> over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a>, the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> expresses every <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>function with rapidly decreasing partial derivatives</a> as a <a class='existingWikiWord' href='/nlab/show/superposition'>superposition</a> of plane waves.</p>
+
+<p>If here <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>≃</mo><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \simeq \mathbb{R}^{p,1}</annotation></semantics></math> is identified with <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> with canonical <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> labeled <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>,</mo><msup><mi>x</mi> <mn>1</mn></msup><mo>,</mo><mi>⋯</mi><msup><mi>x</mi> <mi>p</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(x^0, x^1, \cdots x^p)</annotation></semantics></math>, then the 0-component of the <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ν</mi><mo>≔</mo><msub><mi>k</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>
+  \nu \coloneqq k_0
+
+</annotation></semantics></math></div>
+<p>is called the <em><a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></em> of the wave (in this chosen <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate system</a>). If in this situation the <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> satisfies <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>k_\mu k^\mu = 0</annotation></semantics></math>, then the plane wave is a solution to the <a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a> on Minkowski spacetime. If more generally it satisfies <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>k_\mu k^\mu + m^2 = 0</annotation></semantics></math> for some <math class='maruku-mathml' display='inline' id='mathml_4e1bbd9defa154fdf3b92e9eba97daf28b39b9ee_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>m</mi> <mn>2</mn></msup><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>m^2 \in \mathbb{R}</annotation></semantics></math>, the it is a solution to the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> on Minkowski spacetime.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -446,14 +455,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  6, 2017 06:15:32 
+  Revised on November  6, 2017 10:16:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/plane+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/plane+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plane+wave/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/plane+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plane+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
