--- a/pages/18748.html
+++ b/pages/18748.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -559,19 +559,33 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_78edb2db465a548111d0f78f40274ab36aa3bce7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/inner+product+space'>inner product space</a> and <math class='maruku-mathml' display='inline' id='mathml_78edb2db465a548111d0f78f40274ab36aa3bce7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S(V)</annotation></semantics></math> its <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit sphere</a>, the <em>direction</em> of an element <math class='maruku-mathml' display='inline' id='mathml_78edb2db465a548111d0f78f40274ab36aa3bce7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>v \in V</annotation></semantics></math> with <a class='existingWikiWord' href='/nlab/show/norm'>norm</a> <math class='maruku-mathml' display='inline' id='mathml_78edb2db465a548111d0f78f40274ab36aa3bce7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo stretchy='false'>|</mo><mi>v</mi><mo stretchy='false'>|</mo></mrow></mrow><annotation encoding='application/x-tex'>{\vert v\vert}</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_78edb2db465a548111d0f78f40274ab36aa3bce7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>v</mi><mo stretchy='false'>|</mo></mrow><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>S</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a>, the <em>direction</em> of a non-zero vector <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>v \in V</annotation></semantics></math> is its <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> under multiplication with <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>.</p>
+
+<p>If <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is equipped with the stucture of a <a class='existingWikiWord' href='/nlab/show/norm'>normed vector space</a> (e.g. an <a class='existingWikiWord' href='/nlab/show/inner+product+space'>inner product space</a> with its induced norm <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>↦</mo><msqrt><mrow><mo stretchy='false'>⟨</mo><mi>v</mi><mo>,</mo><mi>v</mi><mo stretchy='false'>⟩</mo></mrow></msqrt></mrow><annotation encoding='application/x-tex'>v\mapsto \sqrt{\langle v, v\rangle}</annotation></semantics></math>), then the <em>direction</em> of a nonzero element <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>v \in V</annotation></semantics></math> is equivalently the unit vector</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo stretchy='false'>/</mo><mrow><mo stretchy='false'>|</mo><mi>v</mi><mo stretchy='false'>|</mo></mrow><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><mi>S</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   v/{\vert v\vert} \;\in \; S(V)
-  \,.
+  \,,
 
 </annotation></semantics></math></div>
+<p>being an element of the <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit sphere</a> <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo stretchy='false'>(</mo><mi>V</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S(V)</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>. (e.g <a href='#MathWorld'>MathWorld</a>).</p>
+
+<p>Similarly the <em>unoriented direction</em> of a non-zero vector in any vector space is its <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> under multiplication with any non-zero element of the <a class='existingWikiWord' href='/nlab/show/ground+ring'>ground field</a>, hence the element it represents in the corresponding <a class='existingWikiWord' href='/nlab/show/projective+space'>projective space</a> <math class='maruku-mathml' display='inline' id='mathml_6b7b8535c2a107011572e46c5c302be604124f89_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>P</mi><mi>V</mi></mrow><annotation encoding='application/x-tex'>P V</annotation></semantics></math>.</p>
+
+<p>Beware that there is also the concept of <em>direction vector</em> of a line, which is related to “direction <em>of</em> a vector”, but is different (see Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Direction_vector'>Direction vector</a></em>).</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='MathWorld'>MathWorld, <em><a href='http://mathworld.wolfram.com/UnitVector.html'>Unit vector</a></em></li>
 </ul>
 
 <p>
@@ -579,14 +593,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  6, 2017 05:47:19 
+  Revised on November  6, 2017 10:55:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/direction+of+a+vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/direction+of+a+vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/direction+of+a+vector/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/direction+of+a+vector" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/direction+of+a+vector" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
