--- a/pages/18733.html
+++ b/pages/18733.html
@@ -319,6 +319,8 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a></p>
 </li>
 </ul>
 
@@ -380,14 +382,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 10:24:01 
+  Revised on November  6, 2017 11:22:12 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/harmonic+analysis+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+analysis+-+contents/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/harmonic+analysis+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+analysis+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/harmonic+analysis+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+analysis+-+contents/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/harmonic+analysis+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+analysis+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
