--- a/pages/9162.html
+++ b/pages/9162.html
@@ -326,6 +326,8 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a></p>
 </li>
 </ul>
 
@@ -398,17 +400,24 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>p \in \mathbb{N}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>,</mo><mn>1</mn></mrow></msup><msub><mo>≃</mo> <mi>ℝ</mi></msub><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p,1} \simeq_{\mathbb{R}} \mathbb{R}^{p+1}</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p+1}</annotation></semantics></math> regarded as <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>, then the <em>frequency</em> of a <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><mi>π</mi><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>p \in \mathbb{N}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>,</mo><mn>1</mn></mrow></msup><msub><mo>≃</mo> <mi>ℝ</mi></msub><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p,1} \simeq_{\mathbb{R}} \mathbb{R}^{p+1}</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{p+1}</annotation></semantics></math> regarded as <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>, then the <em>frequency</em> of a <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><mi>π</mi><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>
   x \mapsto e^{ - 2 \pi i k_\mu x^\mu}
 
 </annotation></semantics></math></div>
-<p>with respect to the chosen <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate system</a> is the 0-component of the given <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0555b2196f1a87ac7cba68fd944f7cb552420dc9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ν</mi><mo>≔</mo><msub><mi>k</mi> <mn>0</mn></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>with respect to the chosen <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate system</a> is the 0-component of the given <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ν</mi><mo>≔</mo><msub><mi>k</mi> <mn>0</mn></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \nu \coloneqq k_0
   \,.
 
 </annotation></semantics></math></div>
+<p>The combination</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a8ce873b102c7147982b96369d6bec5bc7b55f0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ω</mi><mo>≔</mo><mn>2</mn><mi>π</mi><mi>ν</mi><mo>=</mo><mn>2</mn><mi>π</mi><msub><mi>k</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>
+  \omega \coloneqq 2 \pi \nu = 2\pi k_0
+
+</annotation></semantics></math></div>
+<p>is called the <em>angular frequency</em>.</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -427,17 +436,21 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 10:21:36 
+  Revised on November  6, 2017 12:19:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/frequency" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/frequency/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/frequency" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/frequency" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/frequency" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/frequency/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/frequency" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/frequency" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
