--- a/pages/2961.html
+++ b/pages/2961.html
@@ -310,6 +310,8 @@ margin-left: 0em;
 <div id="revision">
     <p><em>The Joy of Cats</em> is a book by <a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Ad%C3%A1mek'>Jiří Adámek</a>, <a class='existingWikiWord' href='/nlab/show/Horst+Herrlich'>Horst Herrlich</a>, and <a class='existingWikiWord' href='/nlab/show/George+Strecker'>George Strecker</a> whose full title is <em>Abstract and Concrete Categories: The Joy of Cats</em>. It is available <a href='http://katmat.math.uni-bremen.de/acc'>online</a>.</p>
 
+<p>The reader should beware that the book uses the term “quasicategory” for what <em><a class='existingWikiWord' href='/nlab/show/Categories+Work'>Categories for the Working Mathematician</a></em> calls a <a class='existingWikiWord' href='/nlab/show/metacategory'>metacategory</a>: a model (in the informal sense) of the first-order theory of a category, with no regard for size issues. These days a <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasicategory</a> is a particular type of <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a> that models an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a>.</p>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 
 <p>
@@ -319,14 +321,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December  3, 2009 22:12:48 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (173.60.119.197)
+  Revised on November  6, 2017 17:32:11 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (211.27.220.131)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/The+Joy+of+Cats" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+Joy+of+Cats/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/The+Joy+of+Cats" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+Joy+of+Cats" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/The+Joy+of+Cats" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+Joy+of+Cats/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/The+Joy+of+Cats" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+Joy+of+Cats" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
