--- a/pages/16892.html
+++ b/pages/16892.html
@@ -331,7 +331,7 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>: Representing anaphora with dependent types. In: Asher, N., Soloviev, S. (eds.) Logical Aspects of Computational Linguistics, Lecture Notes in Computer Science, vol.8535, pp. 14–29 (2014), <a href='http://link.springer.com/chapter/10.1007%2F978-3-662-43742-1_2'>Springer</a>.</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Asher, N.: Logical polysemy and subtyping. In: Motomura, Y., Butler, A., Bekki, D. (eds.) New Frontiers in Artiﬁcial Intelligence, Lecture Notes in Computer Science, vol. 7856, pp. 17–24. Springer (2013)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Asher, N.: Logical polysemy and subtyping. In: Motomura, Y., Butler, A., Bekki, D. (eds.) New Frontiers in Artificial Intelligence, Lecture Notes in Computer Science, vol. 7856, pp. 17–24. Springer (2013)</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Daisuke+Bekki'>Daisuke Bekki</a>, Satoh, M.: Calculating projections via type checking. In: Proceedings of TYTLES (to appear)</li>
 
@@ -356,6 +356,8 @@ margin-left: 0em;
 <li>Sundholm, G.: Proof theory and meaning. In: Gabbay, D., Guenthner, F. (eds.) Handbook of Philosophical Logic, vol. 3, pp. 471–506. Springer (1986)</li>
 
 <li>Tanaka, R., Mineshima, K., Bekki, D.: Resolving modal anaphora in Dependent Type Semantics. In: Proceedings of LENLS11. pp. 43–56 (2014), <a href='http://link.springer.com/chapter/10.1007%2F978-3-662-48119-6_7'>Springer</a>.</li>
+
+<li>Bahramian, H., Nematollahi, N., Sabry, A.: Copredication in Homotopy Type Theory, <a href='https://www.researchgate.net/publication/320704539_Copredication_in_homotopy_type_theory'>pdf</a></li>
 </ul>
 
 <p>A worked example, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> in the <span class='newWikiWord'>Grammatical Framework<a href='/nlab/new/Grammatical+Framework'>?</a></span></p>
@@ -378,14 +380,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 30, 2016 05:28:01 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (51.6.72.106)
+  Revised on November  6, 2017 21:24:41 
+  by <span class="newWikiWord">Hamidreza Bahramian<a href="/nlab/new/Hamidreza+Bahramian">?</a></span>
+  (2602:306:3951:84e0:fd21:20b3:3602:afff)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dependent+type+theoretic+methods+in+natural+language+semantics/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dependent+type+theoretic+methods+in+natural+language+semantics/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dependent+type+theoretic+methods+in+natural+language+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
