--- a/pages/18756.html
+++ b/pages/18756.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      special relativity in nLab
+      speed of light in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      special relativity
+      speed of light
   </h1>
 
 
@@ -902,86 +902,48 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> the <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> of <em>special relativity</em> describes dynamics in <a class='existingWikiWord' href='/nlab/show/physics'>physical</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> in absence of a field of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>.</p>
-
-<p>Specifically, it models</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> as a flat time-oriented <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a>: <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a>;</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/worldvolume'>trajectories</a> of point <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as timelike <a class='existingWikiWord' href='/nlab/show/curve'>curves</a> in Minkowski space.</p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> as a closed 2-<a class='existingWikiWord' href='/nlab/show/differential+form'>form</a> on Minkowski space.</p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/Lorentz+force'>Lorentz force</a> exerted by the electromagnetic field on a charged particle as the contraction of that 2-form with the tangent vector of the trajectory of the particle.</p>
-</li>
-</ul>
-
-<p>If instead of restricting to Minkowski space, spacetime is allowed to be an arbitrary <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a> one speaks of the resulting framework as the theory of <em><a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a></em>.</p>
-
-<p>Mathematically, special relativity is essentially the theory of <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> as a <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a>, hence equipped with the constant <a class='existingWikiWord' href='/nlab/show/metric+space'>metric</a> <a class='existingWikiWord' href='/nlab/show/tensor'>tensor</a> which at each point is the <a class='existingWikiWord' href='/nlab/show/bilinear+form'>bilinear form</a> with <a class='existingWikiWord' href='/nlab/show/quadratic+form'>signature</a> <math class='maruku-mathml' display='inline' id='mathml_9d0b40d59ddd3dec538f627713d3e71a841b614f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(-,+, \cdots, +)</annotation></semantics></math> or else <math class='maruku-mathml' display='inline' id='mathml_9d0b40d59ddd3dec538f627713d3e71a841b614f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>,</mo><mi>⋯</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(+,-,\cdots, -)</annotation></semantics></math> (depending on convention). The null-vectors in this metric characterize the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a>. The linear <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> of this metric are the <a class='existingWikiWord' href='/nlab/show/Lorentz+group'>Lorentz transformations</a> and the fact that with the Minkowski metric these also preserve, hence, null rays is the mathematical model for the famous <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenological</a> observation that “the speed of light is the same in all reference systems”.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/speed'>speed</a> of <a class='existingWikiWord' href='/nlab/show/light'>light</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory (physics)</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic field theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a>, <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Special_relativity'>Special relativity</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Speed_of_light'>Speed of light</a></em></li>
 </ul>
-
-<p>
-</p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  7, 2017 08:19:40 
+  Created on November  7, 2017 08:19:17 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/special+relativity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/special+relativity/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/special+relativity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/special+relativity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/speed+of+light" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/special+relativity" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/speed+of+light" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/special+relativity" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/speed+of+light" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/special+relativity" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/speed+of+light" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
