--- a/pages/15440.html
+++ b/pages/15440.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>, a unital <a class='existingWikiWord' href='/nlab/show/ring'>ring</a> is a <em>Dedekind domain</em> is an <a class='existingWikiWord' href='/nlab/show/integral+domain'>integral domain</a> in which every non-<a class='existingWikiWord' href='/nlab/show/zero+object'>zero</a> <a class='existingWikiWord' href='/nlab/show/ideal'>proper ideal</a> factors into a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> of <a class='existingWikiWord' href='/nlab/show/ideal'>prime ideal</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>, a <strong>Dedekind domain</strong> is an <a class='existingWikiWord' href='/nlab/show/integral+domain'>integral domain</a> in which every non-<a class='existingWikiWord' href='/nlab/show/zero+ideal'>zero</a> <a class='existingWikiWord' href='/nlab/show/ideal'>proper ideal</a> factors into a <span class='newWikiWord'>product<a href='/nlab/new/product+of+ideals'>?</a></span> of <a class='existingWikiWord' href='/nlab/show/ideal'>prime ideal</a>s.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -333,18 +333,19 @@ margin-left: 0em;
 </ul>
 
 <p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Created on July 19, 2014 01:41:00 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.106.79)
+  Revised on November  7, 2017 19:27:12 
+  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
+  (64.89.52.15)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dedekind+domain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dedekind+domain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dedekind+domain/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dedekind+domain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dedekind+domain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
