--- a/pages/17738.html
+++ b/pages/17738.html
@@ -707,29 +707,17 @@ margin-left: 0em;
  
  
 </p>
-
-<p>
- 
- 
- 
-</p>
-
-<p>
- 
- 
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  4, 2017 12:41:38 
+  Revised on November  8, 2017 09:48:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (195.37.234.75)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+spinor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+spinor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dirac+spinor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+spinor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dirac+spinor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+spinor/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Dirac+spinor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+spinor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
