--- a/pages/18761.html
+++ b/pages/18761.html
@@ -567,7 +567,7 @@ margin-left: 0em;
 <h2 id='definition'>Definition</h2>
 
 <p>In the usual standard coordinates, the Dirac current is of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_02b98f7eefbada527af3e5e05e7e09d96aa75614_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>ψ</mi><mo>¯</mo></mover><msup><mi>γ</mi> <mi>μ</mi></msup><mi>ψ</mi><mspace width='thinmathspace'></mspace><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><msup><mi>Ω</mi> <mrow><mi>p</mi><mo>,</mo><mn>0</mn></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dc054f6d532a1cff8d3ebc5e3882da5335f4a708_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>ψ</mi><mo>¯</mo></mover><msup><mi>γ</mi> <mi>μ</mi></msup><mi>ψ</mi><mspace width='thinmathspace'></mspace><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><msup><mi>Ω</mi> <mrow><mi>p</mi><mo>,</mo><mn>0</mn></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \overline{\psi}\gamma^\mu \psi \, \iota_{\partial_\mu} dvol_\Sigma
    \;\in\;
    \Omega^{p,0}
@@ -586,6 +586,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/baryogenesis'>baryogenesis</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>energy-momentum tensor</a></p>
+</li>
 </ul>
 
 <p>
@@ -597,7 +601,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  8, 2017 13:59:24 
+  Created on November  8, 2017 14:09:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
