--- a/pages/9112.html
+++ b/pages/9112.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -899,23 +899,39 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> coupled to other fields, the <em>energy momentum tensor</em> or <em>stress energy tensor</em> T is the <a class='existingWikiWord' href='/nlab/show/variational+calculus'>variation</a> of the matter part <math class='maruku-mathml' display='inline' id='mathml_455570458d3e4fc60308258cb9ce8977bcd56842_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>fields</mi></msub></mrow><annotation encoding='application/x-tex'>S_{fields}</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> with respect to the metric, <math class='maruku-mathml' display='inline' id='mathml_455570458d3e4fc60308258cb9ce8977bcd56842_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><msub><mi>S</mi> <mi>fields</mi></msub><mo>=</mo><mi>T</mi><mi>δ</mi><mi>g</mi></mrow><annotation encoding='application/x-tex'>\delta S_{fields} = T \delta g</annotation></semantics></math>.</p>
+<p>In a <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> coupled to other fields, the <em>energy momentum tensor</em> or <em>stress energy tensor</em> T is the <a class='existingWikiWord' href='/nlab/show/variational+calculus'>variation</a> of the matter part <math class='maruku-mathml' display='inline' id='mathml_0e713d7120ad2d79d74770f762cbb0a9151dfa31_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>fields</mi></msub></mrow><annotation encoding='application/x-tex'>S_{fields}</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> with respect to the metric, <math class='maruku-mathml' display='inline' id='mathml_0e713d7120ad2d79d74770f762cbb0a9151dfa31_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi><msub><mi>S</mi> <mi>fields</mi></msub><mo>=</mo><mi>T</mi><mi>δ</mi><mi>g</mi></mrow><annotation encoding='application/x-tex'>\delta S_{fields} = T \delta g</annotation></semantics></math>.</p>
 
 <p>It is a measure for the <a class='existingWikiWord' href='/nlab/show/energy'>energy</a> and <a class='existingWikiWord' href='/nlab/show/momentum'>momentum</a> density of the matter contribution to the theory.</p>
 
-<p>Since the variation of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> <math class='maruku-mathml' display='inline' id='mathml_455570458d3e4fc60308258cb9ce8977bcd56842_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub></mrow><annotation encoding='application/x-tex'>S_{EH}</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Einstein+tensor'>Einstein tensor</a> <math class='maruku-mathml' display='inline' id='mathml_455570458d3e4fc60308258cb9ce8977bcd56842_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, hence <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a> assert that (up to constant prefactors)</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_455570458d3e4fc60308258cb9ce8977bcd56842_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>=</mo><mi>T</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Since the variation of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> <math class='maruku-mathml' display='inline' id='mathml_0e713d7120ad2d79d74770f762cbb0a9151dfa31_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub></mrow><annotation encoding='application/x-tex'>S_{EH}</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Einstein+tensor'>Einstein tensor</a> <math class='maruku-mathml' display='inline' id='mathml_0e713d7120ad2d79d74770f762cbb0a9151dfa31_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, hence <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a> assert that (up to constant prefactors)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0e713d7120ad2d79d74770f762cbb0a9151dfa31_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>=</mo><mi>T</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   G = T
   \,.
 
 </annotation></semantics></math></div>
+<h2 id='details'>Details</h2>
+
+<ul>
+<li>For the <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>: see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>geometry of physics -- A first idea of quantum field theory</a></em> <a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#ScalarFieldEnergyMomentum'>this example</a></li>
+</ul>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/stress+tensor'>stress tensor</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/stress+tensor'>stress tensor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/dispersion+relation'>energy-momentum relation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+current'>Dirac current</a></p>
+</li>
 </ul>
 
 <p>
@@ -927,14 +943,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 26, 2017 06:14:09 
+  Revised on November  8, 2017 14:09:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.105.77.106)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stress-energy+tensor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stress-energy+tensor/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/stress-energy+tensor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stress-energy+tensor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stress-energy+tensor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stress-energy+tensor/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/stress-energy+tensor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stress-energy+tensor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
