--- a/pages/18755.html
+++ b/pages/18755.html
@@ -899,19 +899,51 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
 <p>The <em>Compton wavelength</em> is a <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> that governs the <a class='existingWikiWord' href='/nlab/show/dispersion+relation'>dispersion relation</a>/<a class='existingWikiWord' href='/nlab/show/dispersion+relation'>energy-momentum relation</a> of <a class='existingWikiWord' href='/nlab/show/mass'>massive</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>.</p>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/particle'>particle</a>/<a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math>, its <em>Compton wavelength</em> is the <a class='existingWikiWord' href='/nlab/show/length'>length</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mi>ℏ</mi><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
-  \frac{\hbar}{m c}
+<p>For a <a class='existingWikiWord' href='/nlab/show/particle'>particle</a>/<a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>
+  \ell_{m_{Pl}} = \sqrt{ \frac{\hbar G}{c^^m</annotation></semantics></math>, its <em>Compton wavelength</em> is the <a class='existingWikiWord' href='/nlab/show/length'>length</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>m</mi></msub><mo>≔</mo><mfrac><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+  \ell_m \coloneqq \frac{2\pi \hbar}{m c}
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> denotes the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a> and <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> denotes <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> denotes the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a> and <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>2\pi\hbar</annotation></semantics></math> denotes <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>. Correspondingly <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mi>ℏ</mi><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>\frac{\hbar}{m c}</annotation></semantics></math> is also called the “reduced Compton wavelength”.</p>
 
 <p>The inverse of the Compton wavelength appears as the <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> term notably in the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> of the <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> or the <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li>
+<p>The Compton wavelength corresponding to the <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> is about <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>e</mi></msub></mrow></msub><mo>~</mo><mn>386</mn></mrow><annotation encoding='application/x-tex'>\ell_{m_e} ~ 386</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/femtometer'>fm</a>.</p>
+</li>
+
+<li>
+<p>Another length scale parameterized by a mass <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> is the <em><span class='newWikiWord'>Schwarzschild radius<a href='/nlab/new/Schwarzschild+radius'>?</a></span></em> <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>r</mi> <mi>m</mi></msub><mo>≔</mo><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>r_m \coloneqq 2 m G/c^2</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/gravitational+constant'>gravitational constant</a>. Solving the <a class='existingWikiWord' href='/nlab/show/equation'>equation</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msub><mi>ℓ</mi> <mi>m</mi></msub></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>r</mi> <mi>m</mi></msub></mtd></mtr> <mtr><mtd><mo>⇔</mo></mtd> <mtd><mi>ℏ</mi><mo stretchy='false'>/</mo><mi>m</mi><mi>c</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+    &amp; \ell_m &amp;=&amp; r_m
+    \\
+    \Leftrightarrow &amp; \hbar / m c &amp;=&amp; 2 m G / c^2
+  }
+
+</annotation></semantics></math></div>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> yields the <em><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle displaystyle='false'><mfrac><mn>1</mn><msqrt><mi>π</mi></msqrt></mfrac></mstyle><msub><mi>m</mi> <mi>Pl</mi></msub><mo>≔</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>c</mi></mrow><mi>G</mi></mfrac></msqrt><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \tfrac{1}{\sqrt{\pi}} m_{Pl} \coloneqq \sqrt{\frac{\hbar c}{G}}
+  \,.
+
+</annotation></semantics></math></div>
+<p>The corresponding Compton wavelength <math class='maruku-mathml' display='inline' id='mathml_f691eafe9e7ecab97261592adf09a94781b31f8b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>Pl</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\ell_{m_{Pl}}</annotation></semantics></math> is given by the <em><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></em></p>
+<div class='maruku-equation'><code class='maruku-mathml'>
+  \ell_{m_{Pl}} = \sqrt{ \frac{\hbar G}{c^^3} }
+  \,
+
+</code></div></li>
+</ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -936,14 +968,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  8, 2017 06:33:50 
+  Revised on November  9, 2017 04:59:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Compton+wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Compton+wavelength/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Compton+wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Compton+wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Compton+wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Compton+wavelength/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Compton+wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Compton+wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
